force-app/main/default/objects/Account_CSM_Health_Rate_Snapshot__c/Account_CSM_Health_Rate_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Account CSM Health Rate Snapshot</label>
    <nameField>
        <label>Account CSM Health Rate Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account CSM Health Rate Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>