force-app/main/default/objects/Account_CSM_Health_Rate_Snapshot__c/fields/PC_CSM_Health_Rating__c.field-meta.xml
<CustomField>
    <fullName>PC_CSM_Health_Rating__c</fullName>
    <label>PC CSM Health Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>